@@ -9,11 +9,13 @@ package EmptySubclass;
 
 package Main;
 use Test::More;
-plan tests => 2;
+plan tests => 3;
 
 ###
 ### Empty Subclass test
 ###
+# Proc::Simple::debug(1);
+
 $psh  = EmptySubclass->new();
 
 ok($psh->start("sleep 10"));        # 1
@@ -21,9 +23,11 @@ ok($psh->start("sleep 10"));        # 1
 while(!$psh->poll) { 
     sleep 1; }
 
-ok($psh->kill());                   # 2
+ok($psh->kill()) or die;                   # 2
 
 while($psh->poll) { 
     sleep 1; }
+
+ok(1, "the end");
 
 1;
